# plate-tectonics

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pypirc  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  appveyor.yml  changelog.txt  run_astyle.sh  run_formatter.sh  run_linter.sh  setup.py
.github/workflows/: push.yml
appveyor/: install.ps1  run_with_compiler.cmd
example/: CMakeLists.txt  example.cpp
examples/: .gitignore  CMakeLists.txt  map_drawing.cpp  map_drawing.hpp  noise_example.cpp  profile_benchmark.cpp  simplex_example.cpp  simulation.cpp  simulation_example.cpp  simulation_rect_example.cpp  sqrdmd_example.cpp  test_cpu_usage.cpp  test_parallelism.cpp  test_scaling_analysis.cpp  test_work_comparison.cpp
platec_src/: heightmap.cpp  heightmap.hpp  lithosphere.cpp  lithosphere.hpp  noise.cpp  noise.hpp  plate.cpp  plate.hpp  platecapi.cpp  platecapi.hpp  platecmodule.c  platecmodule.cpp  rectangle.hpp  simplerandom.cpp  simplerandom.hpp  simplexnoise.cpp  simplexnoise.hpp  sqrdmd.c  sqrdmd.cpp  utils.hpp
pybindings/: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  dev-requirements.txt  pyproject.toml  setup.py  tox.ini
pybindings/platec_src/: platecmodule.cpp
pybindings/src/: lithosphere.cpp  noise.cpp  platecapi.cpp  rectangle.cpp  segment_creator.cpp  segment_data.cpp  simplerandom.cpp  utils.cpp  world_point.cpp
pybindings/test/: test_generation.py  test_issue30.py
scripts/: README.md  analyze_memory.py  benchmark_performance.py  compare_benchmarks.py  profile_performance.py  verify_determinism.py
src/: bounds.cpp  bounds.hpp  dimension.cpp  dimension.h  geometry.cpp  geometry.hpp  heightmap.cpp  heightmap.hpp  lithosphere.cpp  lithosphere.hpp  mass.cpp  mass.hpp  movement.cpp  movement.hpp  noise.cpp  noise.hpp  plate.cpp  plate.hpp  plate_functions.cpp  plate_functions.hpp  platecapi.cpp  platecapi.hpp  rectangle.cpp  rectangle.hpp  segment_creator.cpp  segment_creator.hpp  segment_data.cpp  segment_data.hpp  segments.cpp  segments.hpp  simd_utils.cpp  simd_utils.hpp  simplerandom.cpp  simplerandom.hpp  simplexnoise.cpp  simplexnoise.hpp  sqrdmd.cpp  sqrdmd.hpp  utils.cpp  utils.hpp  (+6 more)
test/: .gitignore  CMakeLists.txt  compile.sh  test_acceptance.cpp  test_bounds.cpp  test_generation.py  test_heightmap.cpp  test_mass.cpp  test_movement.cpp  test_plate.cpp  test_portability.cpp  test_randomness.cpp  test_rectangle.cpp  test_regression.cpp  test_sqrdmd.cpp  testing.hpp
test/googletest/: CMakeLists.txt
test/googletest/.svn/: wc.db
travis/: build_and_test_sdist.sh  build_cpp.sh  build_python.sh  prepare_py.sh  prepare_py26.sh
